--- a/css/screen.css
+++ b/css/screen.css
@@ -1,36 +1,56 @@
+h1 {
+  text-align: center;
+  padding: 1em;
+  font: 36px monospace;
+  border: 5px solid;
+  border-radius: 1em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+p {
+  text-align: center;
+  font: 22px serif;
+  font-style: italic;
+  padding: 2px;
+  margin-bottom: 2em;
+  color: blue;
+}
+
 form {
   /* Center the form on the page */
   margin: 0 auto;
-  width: 400px;
+  width: fit-content;
   /* Form outline */
   padding: 2em;
-  border: 1px solid #CCC;
-  border-radius: 1em;
+  border: 5px solid #CCC;
+  border-radius: 2em;
   margin-top: 2px;
   margin-bottom: 2px;
 }
 
 ul {
   list-style: none;
-  padding: 1px;
+  padding: 3px;
   margin: 0 auto;
 }
 
 form li + li {
   margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 label {
   /* Uniform size & alignment */
   display: inline-block;
-  width: 90px;
-  text-align: right;
+  width: 300px;
+  text-align: center;
 }
 
 input {
   /* To make sure that all text fields have the same font settings
      By default */
-  font: 1em sans-serif;
+  font: 14px monospace;
 
   /* Uniform text field size */
   width: 300px;
@@ -47,11 +67,12 @@ input:focus {
 
 .button {
   /* Align buttons with the text fields */
-  padding-left: 90px; /* same size as the label elements */
+  width: 325px;
+  text-align: center;
 }
 
 button {
   /* This extra margin represent roughly the same space as the space
      between the labels and their text fields */
-  margin-left: .5em;
+  color: red;
 }
