added form and css modifications
added action="#null" in the form and playing with css for media screens

--- a/css/screen.css
+++ b/css/screen.css
@@ -97,6 +97,10 @@ button {
     box-sizing: border-box;
     border: 1px solid gray;
   }
+
+  form {
+    background-color: aqua;
+  }
 }
 
 /* tablet devices media-query */
