--- a/css/screen.css
+++ b/css/screen.css
@@ -7,12 +7,13 @@ h1 {
   border-radius: 1em;
   margin-top: 1em;
   margin-bottom: 1em;
+  background-color: aquamarine;
 }
 
 /* paragraph description */
 p {
   text-align: center;
-  font: 22px serif;
+  font: 30px serif;
   font-style: italic;
   padding: 2px;
   margin-bottom: 2em;
@@ -29,6 +30,7 @@ form {
   border-radius: 2em;
   margin-top: 2px;
   margin-bottom: 2px;
+  background-color: #00ffff;
 }
 
 /* list tags within my HTML form */
@@ -46,13 +48,13 @@ form li + li {
 /* labels that are above the input boxes */
 label {
   display: inline-block;
-  width: 100%;
+  width: 90%;
   text-align: center;
 }
 
 /* the text boxes that the users are inputting data in */
 input {
-  font: 14px monospace;
+  font: 18px monospace;
   width: 300px;
   box-sizing: border-box;
   border: 1px solid #999;
@@ -64,7 +66,7 @@ input:focus {
 
 /* the submit and display user buttons */
 .button {
-  width: 100%;
+  width: 90%;
   text-align: center;
 }
 
@@ -74,10 +76,13 @@ button {
 
 /* smart devices media-query */
 @media screen and (min-width: 480px) {
+h1 {
+    background-color: crimson;
+  }
+
   p {
     text-align: left;
-    font: 18px serif;
-    font-style: italic;
+    font: 22px serif;
     padding: 1px;
     margin-bottom: 1em;
     color: blue;
@@ -99,7 +104,7 @@ button {
   }
 
   form {
-    background-color: aqua;
+    background-color: aliceblue;
   }
 }
 
