--- a/css/screen.css
+++ b/css/screen.css
@@ -7,9 +7,8 @@ h1 {
   border-radius: 1em;
   margin-top: 1em;
   margin-bottom: 1em;
-  background-color: aquamarine;
+  background-color: honeydew;
 }
-
 /* paragraph description */
 p {
   text-align: center;
@@ -19,7 +18,6 @@ p {
   margin-bottom: 2em;
   color: blue;
 }
-
 /* HTML user input form */
 form {
   margin: 0 auto;
@@ -32,26 +30,22 @@ form {
   margin-bottom: 2px;
   background-color: #00ffff;
 }
-
 /* list tags within my HTML form */
 ul {
   list-style: none;
   padding: 3px;
   margin: 0 auto;
 }
-
 form li + li {
   margin-top: 1em;
   margin-bottom: 1em;
 }
-
 /* labels that are above the input boxes */
 label {
   display: inline-block;
   width: 90%;
   text-align: center;
 }
-
 /* the text boxes that the users are inputting data in */
 input {
   font: 18px monospace;
@@ -59,21 +53,17 @@ input {
   box-sizing: border-box;
   border: 1px solid #999;
 }
-
 input:focus {
   border-color: #000;
 }
-
 /* the submit and display user buttons */
 .button {
   width: 90%;
   text-align: center;
 }
-
 button {
   color: red;
 }
-
 /* smart devices media-query */
 @media screen and (min-width: 480px) {
   p {
@@ -83,7 +73,6 @@ button {
     margin-bottom: 1em;
     color: blue;
   }
-
   button {
     color: blue;
   }
@@ -106,57 +95,63 @@ button {
 
 /* tablet devices media-query */
 @media screen and (min-width: 768px) {
-  p {
-    text-align: left;
-    font: 20px serif;
-    padding: 2px;
-    margin-bottom: 2em;
-    color: green;
-  }
-
-  button {
-    color: green;
-  }
-
-  input:focus {
-    border-color: #000;
-  }
-
-  input {
-    font: 14px monospace;
-    width: 300px;
-    box-sizing: border-box;
-    border: 2px solid #999;
-  }
-}
-
-/* desktop/laptop/PC devices media query */
-@media screen and (min-width: 1080px) {
   h1 {
-    background-color: aquamarine;
-    font-family: 'Courier New', Courier, monospace;
+    background-color: #00ffff;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    width: auto;
   }
-
   p {
     text-align: center;
-    font: 25px;
+    font: 20px serif;
     padding: 3px;
     margin-bottom: 3em;
-    color: red;
+    color: blue;
   }
-
   button {
-    color: red;
+    color: blue;
   }
-
   input:focus {
     border-color: #000;
   }
-
   input {
     font: 18px monospace;
     width: 90%;
     box-sizing: border-box;
     border: 3px solid #999;
+    height: 2em;
+  }
+  form {
+    background-color: aquamarine;
+  }
+}
+/* desktop/laptop/PC devices media query */
+@media screen and (min-width: 1080px) {
+  h1 {
+    background-color: floralwhite;
+    font-family: 'Courier New', Courier, monospace;
+    width: auto;
+  }
+  p {
+    text-align: center;
+    font: 22px serif;
+    padding: 3px;
+    margin-bottom: 3em;
+    color: red;
+  }
+  button {
+    color: red;
+  }
+  input:focus {
+    border-color: #000;
+  }
+  input {
+    font: 18px monospace;
+    width: 90%;
+    box-sizing: border-box;
+    border: 3px solid #999;
+    height: 2em;
+  }
+  form {
+    background-color: aliceblue;
   }
 }
