--- a/css/screen.css
+++ b/css/screen.css
@@ -58,7 +58,7 @@ input:focus {
 }
 /* the submit and display user buttons */
 .button {
-  width: 90%;
+  width: 100%;
   text-align: center;
 }
 button {
@@ -66,33 +66,35 @@ button {
 }
 /* smart devices media-query */
 @media screen and (min-width: 480px) {
+  h1 {
+    background-color: chartreuse;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    width: auto;
+  }
   p {
-    text-align: left;
-    font: 22px serif;
-    padding: 1px;
-    margin-bottom: 1em;
-    color: blue;
+    text-align: center;
+    font: 18px serif;
+    padding: 3px;
+    margin-bottom: 3em;
+    color: purple;
   }
   button {
-    color: blue;
+    color: purple;
   }
-
   input:focus {
-    border-color: black;
+    border-color: #000;
   }
-
   input {
-    font: 12px monospace;
-    width: 300px;
+    font: 18px monospace;
+    width: 90%;
     box-sizing: border-box;
-    border: 1px solid gray;
+    border: 3px solid #999;
+    height: 2em;
   }
-
   form {
-    background-color: aliceblue;
+    background-color: gold;
   }
 }
-
 /* tablet devices media-query */
 @media screen and (min-width: 768px) {
   h1 {
